feat: enable proxy route and allow tls certification from caddy
- fix: /network, /topology api 501 issue
- feat: add disaster recovery documentation and cli to restore state when
  the instance is gone (spot instnace)
- feat: auto ssl certification provision when we have added a domain name
  on webui or cli.
- feat: dynamic route the traffic from a domain to a container on ui.
